implemented authentication with passport and jwt
