# models/user.js
@@ -11,17 +11,17 @@ const UsersSchema = new Schema({
   salt: String,
 });
 
-UsersSchema.methods.setPassword = password => {
+UsersSchema.methods.setPassword = function (password) {
   this.salt = crypto.randomBytes(16).toString('hex');
   this.hash = crypto.pbkdf2Sync(password, this.salt, 10000, 512, 'sha512').toString('hex');
 };
 
-UsersSchema.methods.validatePassword = password => {
+UsersSchema.methods.validatePassword = function (password) {
   const hash = crypto.pbkdf2Sync(password, this.salt, 10000, 512, 'sha512').toString('hex');
   return this.hash === hash;
 };
 
-UsersSchema.methods.generateJWT = () => {
+UsersSchema.methods.generateJWT = function() {
   const today = new Date();
   const expirationDate = new Date(today);
   expirationDate.setDate(today.getDate() + 60);
@@ -34,7 +34,7 @@ UsersSchema.methods.generateJWT = () => {
   }, 'secret');
 }
 
-UsersSchema.methods.toAuthJSON = () => {
+UsersSchema.methods.toAuthJSON = function() {
   return {
     _id: this._id,
     email: this.email,
@@ -43,4 +43,4 @@ UsersSchema.methods.toAuthJSON = () => {
   };
 };
 
-export const UserModel = mongoose.model('Users', UsersSchema);
+export const UserModel = mongoose.model('User', UsersSchema);
