# swagger.json
@@ -21,6 +21,93 @@
       "application/json"
     ],
     "paths": {
+			"/auth/company/register": {
+        "post": {
+            "tags": [
+              "User"
+            ],
+            "description": "Create new company with an owner in system",
+            "parameters": [
+              {
+                "name": "user",
+                "in": "body",
+                "description": "User with company that we want to create",
+                "schema": {
+                  "$ref": "#/definitions/User"
+                }
+              }
+            ],
+            "produces": [
+              "application/json"
+            ],
+            "responses": {
+              "200": {
+                "description": "New company with owner is created",
+                "schema": {
+                  "$ref": "#/definitions/Company"
+                }
+              }
+            }
+          }
+			},
+			"/auth/register": {
+        "post": {
+            "tags": [
+              "User"
+            ],
+            "description": "Create new user within a company",
+            "parameters": [
+              {
+                "name": "user",
+                "in": "body",
+                "description": "User that we want to create",
+                "schema": {
+                  "$ref": "#/definitions/User"
+                }
+              }
+            ],
+            "produces": [
+              "application/json"
+            ],
+            "responses": {
+              "200": {
+                "description": "New user is created",
+                "schema": {
+                  "$ref": "#/definitions/LoggedInUser"
+                }
+              }
+            }
+          }
+			},
+			"/auth/login": {
+        "post": {
+            "tags": [
+              "User"
+            ],
+            "description": "Login user within a company",
+            "parameters": [
+              {
+                "name": "user",
+                "in": "body",
+                "description": "User that we want to login",
+                "schema": {
+                  "$ref": "#/definitions/User"
+                }
+              }
+            ],
+            "produces": [
+              "application/json"
+            ],
+            "responses": {
+              "200": {
+                "description": "User logged in",
+                "schema": {
+                  "$ref": "#/definitions/LoggedInUser"
+                }
+              }
+            }
+          }
+      },
       "/accounts": {
         "get": {
           "tags": [
@@ -143,47 +230,32 @@
 
     },
     "definitions": {
-        "RegisterUser": {
-            "required": [
-                "email",
-                "company",
-                "password",
-                "confirm_password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "company": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "confirm_password": {
-                    "type": "string"
-                }
-            }
-        },
-        "LoginUser": {
-            "required": [
-                "email",
-                "company",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "company": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-      "Account": {
+			"User": {
+				"required": [
+						"email",
+						"company",
+						"password"
+				],
+				"properties": {
+						"email": {
+								"type": "string"
+						},
+						"company": {
+								"type": "string"
+						},
+						"password": {
+								"type": "string"
+						}
+				}
+			},
+			"LoggedInUser": {
+				"properties": {
+					"user": {
+							"type": "object"
+					}
+			}
+			},
+			"Account": {
         "required": [
           "name"
         ],
